--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>yuanrulei</title><link href=./static/css/app.741f681265b1cf4b149ecd499ab23cb8.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.e00e51762311e00a2108.js></script><script type=text/javascript src=./static/js/app.eaacce7f399b29e0d862.js></script></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>yuanrulei</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <iframe frameborder="0" scrolling="no" src="./static/canvas.html" width="100%" height="100%"></iframe>
+    <!-- built files will be auto injected -->
+  </body>
+</html>
+<!-- 引入组件库 -->
