--- a/index.html
+++ b/index.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>yuanrulei</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <iframe frameborder="0" scrolling="no" src="./static/canvas.html" width="100%" height="100%"></iframe>
-    <!-- built files will be auto injected -->
-  </body>
-</html>
-<!-- 引入组件库 -->
+<!DOCTYPE html><html><head><link rel=stylesheet href=https://unpkg.com/element-ui/lib/theme-chalk/index.css><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>yuanrulei</title><link href=./static/css/app.d71e9edbf030da9ca7d7336b66bf9f18.css rel=stylesheet></head><body><div id=app></div><iframe frameborder=0 scrolling=no src=./static/canvas.html width=100% height=100%></iframe><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.ceee01db7b2b3f9cc63b.js></script><script type=text/javascript src=./static/js/app.9ee8d29c4f5117033112.js></script></body></html>
